--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -28,10 +28,10 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Variablen                                 						 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\newcommand{\authorName}{Martin Thoma}
-\newcommand{\auftraggeber}{Karlsruhe Institute of Technology}
-\newcommand{\auftragnehmer}{Eine Firma}
-\newcommand{\projektName}{UpToDaTe}
+\newcommand{\authorName}{Worschiboiz}
+\newcommand{\auftraggeber}{Karlsruhe Institute of Technology (IPD Schnellting)}
+\newcommand{\auftragnehmer}{Teco}
+\newcommand{\projektName}{Earables}
 \newcommand{\tags}{\authorName, Pflichtenheft, KIT, Informatik, PSE}
 \newcommand{\glossarName}{Glossar}
 \title{\projektName~(Pflichtenheft)}
@@ -79,6 +79,8 @@
  \clearpage
  \pagenumbering{arabic}
 
+\section{Einleitung}
+
 \section{Zielbestimmung}
 \subsection{Musskriterien}
 \subsection{Wunschkriterien}
@@ -105,11 +107,13 @@
 \subsection{Messdaten}
 
 \section{Nichtfunktionale Anforderungen}
+\subsection{Laufzeitverhalten}
+\subsection{Speicherplatz}
+\subsection{Stabilität}
+
+\section{Systemmodelle}
 
 \section{Benutzeroberfläche}
-
-\section{Qualitätszielbestimmungen}
-% Tabelle ... schafeln .. was ist ihm wichtig
 
 \section{Globale Testfälle und Szenarien}
 \subsection{Globale Testfälle}
