Einteilung der Pflichtenheftkapitel

--- a/Glossar.tex
+++ b/Glossar.tex
@@ -6,12 +6,12 @@
 %  name=Sortierschlüssel,
 %  description={ein Schlüssel, anhand dessen diese Einträge sortiert werden}
 %}
-\newglossaryentry{uptodate}
+\newglossaryentry{uptodate} %demo, weg
 {
   name=UpToDaTe,
   description={Upload Automation and Data Entry}
 }
-\newglossaryentry{nir}
+\newglossaryentry{nir}  %demo, weg
 {
   name=NIR,
   description={Nahes Infrarot}
