fixed compiling error

--- a/Pflichtenheft.tex
+++ b/Pflichtenheft.tex
@@ -6,6 +6,7 @@
 \usepackage[T1]{fontenc}    % this is needed for correct output of umlauts in pdf
 \usepackage[margin=2.5cm]{geometry} %layout
 \usepackage{booktabs}
+\usepackage{lmodern}
 
 % this is needed for forms and links within the text
 \usepackage{hyperref}
