Punkte Funktionale Anforderungen und Entwicklungsumgebung im Pflichtenheft bearbeitet.

--- a/Deckblatt.tex
+++ b/Deckblatt.tex
@@ -29,7 +29,7 @@
 \textbf{Version} & \textbf{Datum} & \textbf{Autor(en)} \\
 \hline
 \hline
-1.0 & 26.04.2012 & \authorName \\
+1.0 & \today & \authorName \\
 \hline
 \end{tabular}
 \end{titlepage}
